Afinacion de Detalles

--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
@@ -13,14 +13,14 @@
                     <div class="mens-toolbar">
                         <div class="sort">
                             <div class="sort-by">
-                                <label>Sort by</label>
+                                <label>Ordenar por</label>
                                 <select>
                                     <option value="">
-                                        Position                </option>
+                                        Posición                </option>
                                     <option value="">
-                                        Name                </option>
+                                        Nombre                </option>
                                     <option value="">
-                                        Price                </option>
+                                        Precio               </option>
                                 </select>
                                 <a href=""><img src="{{ asset('images/arrow2.gif') }}" alt="" class="v-middle"></a>
                             </div>
