--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/promociones.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/promociones.html.twig
@@ -16,7 +16,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi4.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -25,7 +25,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi5.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -34,7 +34,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi6.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -43,7 +43,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi.jpg')}}" alt=" " ></a>
                             <div class="you-in you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -52,7 +52,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi2.jpg')}}" alt=" " ></a>
                             <div class="you-in you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -61,7 +61,7 @@
                             <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi3.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
-                                <small>off</small>
+                                <small>desc</small>
                             </div>
                             <p>Nombre del producto</p>
                             <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
@@ -80,27 +80,27 @@
                     <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic.jpg')}}" alt=""></a>
                         <div class="hide-in">
                             <p>Nombre del producto</p>
-                            <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                            <span>$0.00  | {% if user %} <a href="#">Comprar ahora </a></span>{% endif %}
                         </div></li>
                     <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic1.jpg')}}" alt=""></a>
                         <div class="hide-in">
                             <p>Nombre del producto</p>
-                            <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                            <span>$0.00  |  {% if user %} <a href="#">Comprar ahora </a></span>{% endif %}
                         </div></li>
                     <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic3.jpg')}}" alt=""></a>
                         <div class="hide-in">
                             <p>Nombre del producto</p>
-                            <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                            <span>$0.00  |  {% if user %} <a href="#">Comprar ahora </a></span>{% endif %}
                         </div></li>
                     <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic4.jpg')}}" alt=""></a>
                         <div class="hide-in">
                             <p>Nombre del producto</p>
-                            <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                            <span>$0.00  |  {% if user %} <a href="#">Comprar ahora </a></span>{% endif %}
                         </div></li>
                     <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic2.jpg')}}" alt=""></a>
                         <div class="hide-in">
                             <p>Nombre del producto</p>
-                            <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                            <span>$0.00  |  {% if user %} <a href="#">Comprar ahora </a></span>{% endif %}
                         </div></li>
                 </ul>
 
