Afinacion de Detalles2

--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
@@ -72,7 +72,7 @@
                 </div>
                 <div class="discount">
                     <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/p3.jpg')}}" alt=" " ></a>
-                    <a href="#" class="know-more">Saber más</a>
+                    <a href="#" class="know-more">Saber más...</a>
                 </div>
 
             </div>
