Registrando Producto Backend

--- a/src/too/sistemadeventasBundle/Resources/views/Formularios/productoForm.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Formularios/productoForm.html.twig
@@ -16,16 +16,8 @@
                                         }
                                     </script>
                                 {% endfor %}
-                                {% for flashMessage in app.session.flashbag.get('exito') %}
-                                    <script>
-                                        window.onload = function notificacion(){
-                                            alertify.log("{{ flashMessage }}.");
-                                            return false;
-                                        }
-                                    </script>
-                                {% endfor %}
                                 <li>
-                                    <h2>REGISTRO DE USUARIO</h2>
+                                    <h2>REGISTRO DE Producto</h2>
 
                                 </li>
 
