CRUD de Usuarios 80% realizado

--- a/src/too/sistemadeventasBundle/Resources/views/Admin/registroAdmin2.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/registroAdmin2.html.twig
@@ -1,22 +1,46 @@
-{% extends '::base.html.twig' %}
-{% block title %}Registro{% endblock %}
+{% extends '::baseAdmin.html.twig' %}
+{% block title %}Registro Admin{% endblock %}
+{% block active3 %}class="active"{% endblock active3 %}
 {% block body %}
     <div class="content">
         <div class="container">
+            <ol class="breadcrumb">
+                <li>
+                    <a href="{{ path('allUsuarios') }}">Todos</a>
+                </li>
+                <li>
+                    <a href="{{ path('crudUsuarios') }}">Usuarios</a>
+                </li>
+                <li>
+                    <a href="{{ path('crudClientes') }}">Clientes</a>
+                </li>
+                <li>
+                    <a href="{{ path('crudAdmin') }}">Administradores</a>
+                </li>
+                <li class="active">Agregar Nuevo Admistrador</li>
+            </ol>
             <div class="register">
-                <form method="post" style="margin: 0 auto 0 auto;" action="{{ path('toosistemadeventas_registro') }}">
+                <form method="post" style="margin: -50px auto 0 auto;" action="{{ path('nuevoAdmin') }}">
                     <div class="register-top-grid"  style="margin: 0 auto 0 auto; text-align: center;">
 
 
                         <div class="contact_form" id="contact_form"  >
                             <ul style="margin: 0 auto 0 auto;">
                                 {% for flashMessage in app.session.flashbag.get('credencial') %}
-                                    <div class="alert alert-danger fade in">
-                                    <span class="close" data-dismiss="alert">
-                                    &times;
-                                    </span>
-                                        {{ flashMessage }}
-                                    </div>
+                                    <script>
+                                        window.onload = function error(){
+                                            alertify.error("{{ flashMessage }}.");
+                                            return false;
+                                        }
+                                    </script>
+                                {% endfor %}
+                                {% for flashMessage in app.session.flashbag.get('exito') %}
+                                    <script>
+                                        window.onload = function notificacion(){
+                                            alertify.log("{{ flashMessage }}.");
+                                            return false;
+                                        }
+                                    </script>
                                 {% endfor %}
                                 <li>
                                     <h2>REGISTRO DE ADMINISTRADOR</h2>
