--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
-{% block title %}Sistema Contable!!{% endblock %}
+{% block title %}Sistema de Ventas{% endblock %}
 {% block active1 %}class="active"{% endblock active1 %}
 {% block body %}
 
