--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2790,13 +2790,18 @@ a.to-cart img {
   	height: 30px; 
   	width: 50%;
   	padding: 5px 8px; 
-  } 
+  }
+  .contact_form select{
+	  height: 30px;
+	  width: 70%;
+	  padding: 5px 8px;
+  }
   .contact_form textarea { 
   	padding: 8px; 
   	width: 30%; 
   } 
   .contact_form button { margin-left: 156px; } /* form element visual styles */ 
-  .contact_form input, .contact_form textarea { 
+  .contact_form input, .contact_form textarea, .contact_form select{
   	border: 1px solid #aaa; 
   	box-shadow: 0px 0px 3px #1a1a1a, 0 10px 15px #eee inset;
   	border-radius: 2px; 
@@ -2814,15 +2819,15 @@ a.to-cart img {
   	} 
   	/* === HTML5 validation styles === */ 
   .contact_form input:required, .contact_form textarea:required { 
-  	background: #fff url(images/red_asterisk.png) no-repeat 98% center; 
+  	background: #fff  no-repeat 98% center;
   } 
   .contact_form input:required:valid, .contact_form textarea:required:valid { 
-  	background: #fff url(images/valid.png) no-repeat 98% center; 
+  	background: #fff  no-repeat 98% center;
   	box-shadow: 0 0 5px #5cd053; 
   	border-color: #28921f; 
   } 
   .contact_form input:focus:invalid, .contact_form textarea:focus:invalid { 
-  	background: #fff url(images/invalid.png) no-repeat 98% center; 
+  	background: #fff  no-repeat 98% center;
   	box-shadow: 0 0 5px #d45252; border-color: #b03535; 
   	} 
   	/* === Form hints === */ 
