CRUD DE PRODUCTOS

--- a/app/Resources/views/baseAdmin.html.twig
+++ b/app/Resources/views/baseAdmin.html.twig
@@ -115,9 +115,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="footer-class">
                 <div class="class-footer">
                     <ul>
-                        <li ><a href="{{ path('toosistemadeventas_inicio') }}" class="scroll">INICIO </a><label>|</label></li>
-                        <li><a href="{{ path('toosistemadeventas_promociones') }}" class="scroll">PROMOCIONES</a><label>|</label></li>
-                        <li><a href="{{ path('catalogo') }}" class="scroll">CATALOGO</a><label>|</label></li>
+                        <li ><a href="{{ path('inicioAdmin') }}" class="scroll">INICIO </a><label>|</label></li>
+                        <li><a href="{{ path('productos') }}" class="scroll">PRODUCTOS</a><label>|</label></li>
+                        <li><a href="{{ path('crudUsuarios') }}" class="scroll">USUARIOS</a><label>|</label></li>
                     </ul>
                     <p class="footer-grid">&copy; 2015 Sistema de Ventas <a href="#" target="_blank"> TOO-115</a> </p>
                 </div>
