--- a/src/too/sistemadeventasBundle/Resources/views/Admin/productos.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/productos.html.twig
@@ -1,12 +1,76 @@
 {% extends '::baseAdmin.html.twig' %}
-{% block title %}Sistema De Ventas!!{% endblock %}
+{% block title %}Productos!!{% endblock %}
 {% block active2 %}class="active"{% endblock active2 %}
 {% block body %}
+    {% for flashMessage in app.session.flashbag.get('fracaso') %}
+        <script>
+            window.onload = function error(){
+                alertify.error("{{ flashMessage }}.");
+                return false;
+            }
+        </script>
+    {% endfor %}
+    {% for flashMessage in app.session.flashbag.get('exito') %}
+        <script>
+            window.onload = function notificacion(){
+                alertify.log("{{ flashMessage }}.");
+                return false;
+            }
+        </script>
+    {% endfor %}
+    <div class="content">
+        <div class="container" style="height: auto;">
+            <h1 style="text-align: center;">Productos</h1>
 
-<div class="content">
-    <div class="container" style="height: 400px;">
-    <h1>Productos</h1>
+            <a href="{{ path('nuevoProducto') }}" title="Agregar" class="btn btn-success">Agregar Nuevo Producto</a>
+            <hr/>
+            <table class="table table-bordered">
+                <tbody>
+                <th>
+                    Imagen
+                </th>
+                <th>
+                    Nombre
+                </th>
+                <th>
+                    Descripcion
+                </th>
+
+                <th>
+                    Precio Unitario
+                </th>
+                <th>
+                   Estado
+                </th>
+
+                <th style="text-align: center;">
+                    Acciones
+                </th>
+                </tbody>
+                {% for producto in productos %}
+
+                    <tr>
+                        <td style="text-align: center;"><img src="{{ asset(producto.imagen) }}" alt="img1" style="width: 100px; height: 70px;"></td>
+                        <td>{{ producto.nombreProd }}</td>
+                        <td>{{ producto.descripcionProd }}</td>
+                        <td>${{ producto.precioUnitario }}</td>
+                        <td>{% if producto.estado()==1 %}
+                                Activo
+                            {% else %}
+                                Inactivo
+                            {% endif %}
+                        </td>
+                        <td style="text-align: center;">
+                            <a href="{{ asset('app_dev.php/editarProducto') }}/{{ producto.idProducto }}" title="Editar" class="btn btn-default" style="background: #0AA5E2;color: #ffffff;">Editar</a>
+                            -
+                            <a href="{{ asset('app_dev.php/bajarProducto') }}/{{ producto.idProducto }}" title="Eliminar" class="btn btn-danger">Dar de Baja</a>
+                        </td>
+
+                    </tr>
+
+                {% endfor %}
+            </table>
+        </div>
     </div>
-</div>
 
 {% endblock body %}
