--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2786,11 +2786,18 @@ a.to-cart img {
   	float: left; 
   	padding: 3px; 
   } 
-  .contact_form input { 
-  	height: 30px; 
-  	width: 50%;
-  	padding: 5px 8px; 
-  }
+  .contact_form input {
+	   height: 30px;
+	   width: 50%;
+	   padding: 5px 8px;
+   }
+.contact_form input[type='file'] {
+	height: 30px;
+	width: 70%;
+	padding: 5px 8px;
+	margin-left: 180px;
+
+}
   .contact_form select{
 	  height: 30px;
 	  width: 70%;
