Con vista carrito

--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
@@ -43,8 +43,8 @@
                     <div class="product_box1">
                      {% for dato in datos %}
                         <div class="col-md-4 grid-4 grid-in" style="margin: 0 auto 0 auto;">
-                            <a href="">
-                                <img src="{{ asset(dato.imagen) }}" class="img-responsive" alt="" style="width: 335px;height: 200px;">
+                            <a href="#">
+                               <div style="width: 235px;height: 150px; margin: 0 auto 0 auto;"> <img src="{{ asset(dato.imagen) }}" class="img-responsive" alt="" style="width: 210px;height: 140px;"></div>
                             </a>
                             <div class="tab_desc1">
                                 <h3><a href="#">{{ dato.nombreProd }}</a></h3>
