--- a/src/too/sistemadeventasBundle/Resources/views/Admin/productos.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/productos.html.twig
@@ -69,6 +69,31 @@
                     </tr>
 
                 {% endfor %}
+
+                <tr >
+                    <td colspan="6" style="text-align: right">
+                        <nav>
+                            <ul class="pagination">
+                                <li>
+                                    <a href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li>
+                                    <a href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </td>
+                </tr>
+
             </table>
         </div>
     </div>
