--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
@@ -3,7 +3,7 @@
 {% block active6 %}class="active"{% endblock active6 %}
 {% block body %}
     {% for flashMessage in app.session.flashbag.get('credencial') %}
-        <script>
+        <script xmlns="http://www.w3.org/1999/html">
             window.onload = function error(){
                 alertify.error("{{ flashMessage }}.");
                 return false;
@@ -42,16 +42,23 @@
 
             </th>
             </tbody>
-
+            {% for carrito in carrito %}
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td><input type="number" required name="nombreProd" value=""></td>
-                    <td></td>
+                    <td>{{ carrito.producto }}</td>
+                    <td>{{ carrito.precio }}</td>
+                    <td>
+                        <form method="post" action="{{ path('editarCarrito') }}">
+                            <input type="number" required name="cantidad_P" value="{{ carrito.cantidad }}"><input type="submit" value="Actualizar">
+                            <input type="hidden" name="id_car" value="{{ carrito.idCarrito }}" >
+                        </form>
+
+                    </td>
+                    <td>{{ carrito.precio }}</td>
                     <td style="text-align: center;">
                         <a href="" title="Eliminar" class="btn btn-danger">Eliminar</a>
                     </td>
                 </tr>
+            {% endfor %}
                 <tr>
                     <td></td>
                     <td></td>
