--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,7 +85,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li {% block active1 %}{% endblock active1 %}><a href="{{ path('toosistemadeventas_inicio') }}">INICIO </a></li>
                         <li {% block active2 %}{% endblock active2 %}><a href="{{ path('toosistemadeventas_promociones') }}" >PROMOCIONES</a></li>
                         <li {% block active3 %}{% endblock active3 %}><a href="{{ path('catalogo') }}" >CATÁLOGO</a></li>
-                        <li {% block active4 %}{% endblock active4 %}><a href="{{ path('carrito') }}" >CARRITO</a></li>
+                        {% if user %} <li {% block active4 %}{% endblock active4 %}><a href="{{ path('carrito') }}" >CARRITO</a></li>{% endif %}
                     </ul>
                     <script>
                         $("span.menu").click(function(){
