--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
@@ -64,7 +64,7 @@
                     <td>
                         <b>TOTAL A PAGAR :  $ {{ total }}</b>
                     </td>
-                    <td><a href="{{ path('catalogo') }}" title="Agregar" class="btn btn-primary">Comprar</a></td>
+                    <td><a href="{{ path('venta') }}" title="Agregar" class="btn btn-primary">Comprar</a></td>
 
                 </tr>
 
