--- a/src/too/sistemadeventasBundle/Resources/views/pdf.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/pdf.html.twig
@@ -12,7 +12,7 @@
                             <tr>
                                 <td rowspan="1" ><img src="file:///c:/xampp/htdocs/sventas/web/images/logo.png" style="margin: 0 auto 0 auto; width: 300px; height: 100px;"></td>
                                 <td><h3 class="text-center">Tienda de Electrodomesticos <br/> NTN</h3></td>
-                                <td><h3 class="text-center" style="">&nbsp;&nbsp;&nbsp;&nbsp;N° Factura:</h3></td>
+                                <td><h3 class="text-center" style="">&nbsp;&nbsp;&nbsp;&nbsp;N Factura:</h3></td>
                             </tr>
                             <tr>
                                 <td></td>
@@ -20,12 +20,12 @@
                                 <td><h4>&nbsp;&nbsp;Registro:  2563S</h4></td>
                             </tr>
                             <tr>
-                                <td><h4>Cliente: </h4></td>
+                                <td><h4>Cliente: {{ user.nombreUsu }} {{ user.apellidoUsu }}</h4></td>
                                 <td></td>
                                 <td>NIT:</td>
                             </tr>
                             <tr>
-                                <td><h4>Correo Electronico:</h4></td>
+                                <td><h4>Correo Electronico:{{ user.correo }}</h4></td>
                             </tr>
                         </table>
 
@@ -35,7 +35,7 @@
 
                             <i class="fa fa-globe"></i> Facturacion de articulos
                         </h2>
-                        <small class="pull-left">Cliente: Fernando Bolanos </small>
+                        <small class="pull-left">Cliente: {{ user.nombreUsu }} {{ user.apellidoUsu }}</small>
                         <small class="pull-right">Fecha: {{ hora }}</small>
                         <!--Finaliza Cabecera de tabla-->
 
@@ -44,14 +44,13 @@
                             <table border=1 cellspacing=0 cellpadding=10 bordercolor="#000000" class="table table-responsive">
                                 <thead>
                                 <th>Producto</th>
-                                <th>Precio</th>
                                 <th>Cantidad</th>
+                                <th>Precio</th>
                                 <th>SubTotal</th>
                                 </thead>
                                 <tbody>
                                 {% for car in car %}
                                 <tr>
-                                    <td>{{ car.producto }}</td>
                                     <td>{{ car.producto }}</td>
                                     <td>{{ car.cantidad }}</td>
                                     <td>{{ car.precio }}</td>
@@ -61,7 +60,9 @@
                                 </tbody>
                                 {% endfor %}
                             </table>
-                            <h3 class="pull-right">        Precio de articulos {{ total }}</h3>
+                            <h3 class="pull-right">Precio de articulos $  {{ total }}</h3>
+                            <h3 >Iva de articulos $  {{ total*0.13 }}</h3>
+                            <h3 class="pull-right">Total a Pagar $  {{ total*1.13 }}</h3>
                         </div>
                     </div>
                 </div>
