Para revision de commit

--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
@@ -22,6 +22,7 @@
     <div class="container" style="height: auto;">
         <h1>Carrito de Compras</h1>
         <a href="{{ path('catalogo') }}" title="Agregar" class="btn btn-success">Catálogo de Productos</a>
+        <h3 style="text-align: right;">Su saldo es: $ {{ user }}</h3>
         <hr/>
         <table class="table table-striped">
             <tbody>
